# face_verification_demo

./: .gitmodules  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
telegram_ui/: bot.py  log.py  run.py
